// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuUtilityMenuItem should render a menu utility menu item with a content location 1`] = `
<button
  aria-label=""
  className="footer-item"
  onClick={[Function]}
  onKeyDown={[Function]}
/>
`;

exports[`MenuUtilityMenuItem should render a menu utility menu item with a title 1`] = `
<li
  aria-label="title"
  className="body-item"
  key="key"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex="0"
>
  <Arrange
    align="center"
    fill={
      <div>
        title
      </div>
    }
    fitEnd={
      <IconChevronRight
        className="chevron"
        data-name="Layer 1"
        isBidi={true}
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    fitStart={
      <IconCheckmark
        className="checkmark"
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
  />
</li>
`;

exports[`MenuUtilityMenuItem should render a menu utility menu item with content 1`] = `
<li
  aria-label=""
  className="body-item body-custom-item"
  key="key"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex="0"
>
  <UserData
    userDetail={null}
    userName={null}
  />
</li>
`;

exports[`MenuUtilityMenuItem should render a menu utility menu item with default props 1`] = `
<li
  aria-label=""
  className="body-item"
  key="key"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex="0"
>
  <Arrange
    align="center"
    fill={
      <div>
        
      </div>
    }
    fitEnd={
      <IconChevronRight
        className="chevron"
        data-name="Layer 1"
        isBidi={true}
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    fitStart={
      <IconCheckmark
        className="checkmark"
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
  />
</li>
`;

exports[`MenuUtilityMenuItem should render a menu utility menu item with hasChevron set 1`] = `
<li
  aria-label=""
  className="body-item"
  key="key"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex="0"
>
  <Arrange
    align="center"
    fill={
      <div>
        
      </div>
    }
    fitEnd={
      <IconChevronRight
        className="chevron"
        data-name="Layer 1"
        isBidi={true}
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    fitStart={
      <IconCheckmark
        className="checkmark"
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
  />
</li>
`;

exports[`MenuUtilityMenuItem should render a menu utility menu item with isSelectable set 1`] = `
<li
  aria-label=""
  className="body-item"
  key="key"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex="0"
>
  <Arrange
    align="center"
    fill={
      <div>
        
      </div>
    }
    fitEnd={
      <IconChevronRight
        className="chevron"
        data-name="Layer 1"
        isBidi={true}
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    fitStart={
      <IconCheckmark
        className="checkmark"
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
  />
</li>
`;

exports[`MenuUtilityMenuItem should render a menu utility menu item with isSelected set 1`] = `
<li
  aria-label=""
  className="body-item"
  key="key"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex="0"
>
  <Arrange
    align="center"
    fill={
      <div>
        
      </div>
    }
    fitEnd={
      <IconChevronRight
        className="chevron"
        data-name="Layer 1"
        isBidi={true}
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    fitStart={
      <IconCheckmark
        className="checkmark"
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
  />
</li>
`;
